# vtoml

./: .gitignore  CMakeLists.txt  LICENSE
include/vtoml/: Value.h
include/vtoml/lexer/: .gitignore
include/vtoml/parser/: Parser.h
source/: Value.cpp
source/lexer/: .gitignore  Lexer.vlex
source/parser/: Parser.cpp
